--- a/.github/workflows/flyway_migrate.yml
+++ b/.github/workflows/flyway_migrate.yml
@@ -1,46 +1,3 @@
-# name: Flyway Migrate
-
-# # Trigger the workflow on push to the main branch
-# on:
-#   push:
-#     branches:
-#       - main
-#   pull_request:
-#     branches:
-#       - main
-
-# jobs:
-#   flyway-migrate:
-#     runs-on: windows-latest  # Use Windows as the runner
-
-#     steps:
-#     - name: Checkout code
-#       uses: actions/checkout@v2
-
-#     # Install Java (Flyway requires Java to run)
-#     - name: Set up JDK (if needed for Flyway)
-#       uses: actions/setup-java@v2
-#       with:
-#         java-version: '11' # Specify your Java version if needed for Flyway
-
-#     # Install Flyway on Windows
-#     - name: Install Flyway
-#       run: |
-#         Invoke-WebRequest -Uri "https://flywaydb.org/download/community/latest" -OutFile "flyway.zip"
-#         Expand-Archive -Path "flyway.zip" -DestinationPath "flyway"
-#         Move-Item -Path "flyway" -Destination "C:\flyway"
-
-#     # Run Flyway Migrate
-#     - name: Run Flyway Migrate
-#       run: |
-#         C:\flyway\flyway -configFiles=flyway.conf migrate
-
-
-
-
-
-
-
 name: Flyway Migrate
 
 on:
@@ -50,7 +7,7 @@ on:
 
 jobs:
   migrate:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest  # Use Windows as the runner
 
     services:
       postgres:
@@ -71,17 +28,20 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Java
+    # Install Java (Flyway requires Java to run)
+    - name: Set up JDK
       uses: actions/setup-java@v2
       with:
         java-version: '11'
 
+    # Install Flyway on Windows
     - name: Install Flyway
       run: |
-        curl -L https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/9.22.3/flyway-commandline-9.22.3-linux-x64.tar.gz | tar xz
-        sudo ln -s $PWD/flyway-*/flyway /usr/local/bin/flyway
+        Invoke-WebRequest -Uri "https://flywaydb.org/download/community/latest" -OutFile "flyway.zip"
+        Expand-Archive -Path "flyway.zip" -DestinationPath "flyway"
+        Move-Item -Path "flyway" -Destination "C:\flyway"
 
+    # Run Flyway migration with the correct paths
     - name: Run Flyway migration
-      run: flyway -configFiles=flyway.conf migrate
-
-
+      run: |
+        C:\flyway\flyway -configFiles=C:/Users/Mohammad Burhanuddin/Desktop/devops/flyway/flyway.conf migrate
