--- a/.github/workflows/flyway_migrate.yml
+++ b/.github/workflows/flyway_migrate.yml
@@ -3,11 +3,11 @@ name: Flyway Migrate
 on:
   push:
     branches:
-      - main
+      - main  # Trigger migration on push to the main branch
 
 jobs:
   migrate:
-    runs-on: windows-latest  # Use Windows as the runner
+    runs-on: ubuntu-latest  # Use Ubuntu as the runner
 
     services:
       postgres:
@@ -19,44 +19,33 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: Mohammad
         options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    # Install Java (Flyway requires Java to run)
-    - name: Set up JDK
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
+      - name: Set up JDK for Flyway
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
 
-    # Install Flyway on Windows
-    - name: Install Flyway
-      run: |
-        Invoke-WebRequest -Uri "https://flywaydb.org/download/community/latest" -OutFile "flyway.zip"
-        Expand-Archive -Path "flyway.zip" -DestinationPath "flyway"
-        Move-Item -Path "flyway" -Destination "C:\flyway"
+      - name: Install Flyway CLI
+        run: |
+          curl -L https://flywaydb.org/download/community/latest | tar -xz -C /tmp
+          sudo mv /tmp/flyway*/flyway /usr/local/bin
 
-    # Print current directory for debugging
-    - name: Print current directory
-      run: |
-        echo "Current working directory:"
-        pwd
-        echo "Listing files in the current directory:"
-        dir
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          for i in {1..10}; do
+            pg_isready -h localhost -p 5432 -U postgres && break
+            echo "Waiting for PostgreSQL..."
+            sleep 5
+          done
 
-    # Wait for PostgreSQL to be ready
-    - name: Wait for PostgreSQL to be ready
-      run: |
-        docker exec -t postgres pg_isready -U postgres
-      continue-on-error: true
-
-    # Run Flyway migration
-    - name: Run Flyway migration
-      run: |
-        # Adjusting path to use relative paths instead of full Windows paths
-        C:\flyway\flyway -configFiles=flyway.conf migrate
+      - name: Run Flyway migration
+        run: |
+          flyway -configFiles=flyway.conf migrate
