--- a/.github/workflows/flyway_migrate.yml
+++ b/.github/workflows/flyway_migrate.yml
@@ -3,7 +3,7 @@ name: Flyway Migrate
 on:
   push:
     branches:
-      - master
+      - master  # Trigger migration on push to master branch
 
 jobs:
   migrate:
@@ -19,36 +19,42 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: Mohammad
         options: >-
-          --health-cmd="pg_isready -U postgres"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
+          --health-cmd pg_isready -U postgres
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Set up JDK
-        uses: actions/setup-java@v2
+      - name: Set up Java
+        uses: actions/setup-java@v3
         with:
-          java-version: '11'
           distribution: 'temurin'
+          java-version: '11'
 
       - name: Install Flyway
         run: |
           curl -L https://flywaydb.org/download/community/latest | tar -xz -C /tmp
-          sudo mv /tmp/flyway*/flyway /usr/local/bin
+          sudo mv /tmp/flyway-*/flyway /usr/local/bin
 
-      - name: Wait for PostgreSQL
+      - name: Wait for PostgreSQL to be ready
         run: |
-          until pg_isready -h localhost -p 5432 -U postgres; do
-            echo "Waiting for postgres..."
-            sleep 2
+          for i in {1..10}; do
+            if pg_isready -h localhost -p 5432 -U postgres; then
+              echo "PostgreSQL is ready!"
+              break
+            fi
+            echo "Waiting for PostgreSQL..."
+            sleep 5
           done
 
       - name: Run Flyway migration
         run: |
-          flyway -url=jdbc:postgresql://localhost:5432/flyway_test_db \
-                 -user=postgres \
-                 -password=Mohammad \
-                 migrate
+          flyway \
+            -url=jdbc:postgresql://localhost:5432/flyway_test_db \
+            -user=postgres \
+            -password=Mohammad \
+            -locations=filesystem:sql \
+            -X migrate
