--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,3 @@
-
-# version: '3.8'
-
-# services:
-#   postgres-flyway:
-#     image: postgres:15
-#     ports:
-#       - "5432:5432"
-#     environment:
-#       POSTGRES_DB: flyway_test_db
-#       POSTGRES_USER: postgres
-#       POSTGRES_PASSWORD: Mohammad
-
-
 version: '3.8'
 
 services:
@@ -26,8 +12,9 @@ services:
 
   flyway:
     image: flyway/flyway:9.22.3
-    command: -url=jdbc:postgresql://postgres-flyway-1:5432/flyway_test_db -user=postgres -password=Mohammad -locations=filesystem:/sql migrate
+    command: -configFiles=/flyway/flyway.conf migrate
     volumes:
-      - ./sql:/sql  # Mount your SQL migration files
+      - ./flyway/sql:/sql                 # Mount SQL scripts
+      - ./flyway/flyway.conf:/flyway/flyway.conf  # Correct path to conf
     depends_on:
       - postgres-flyway
