V18  Add Column to Account Table named cvcv

--- a/.github/workflows/flyway_migrate.yml
+++ b/.github/workflows/flyway_migrate.yml
@@ -52,4 +52,5 @@ jobs:
 
       - name: Run Flyway migration using config file
         run: |
-          flyway -configFiles=flyway/flyway.conf migrate
+          flyway -configFiles=flyway.conf migrate
+        working-directory: ./flyway
