V18  Add Column to Account Table named cvcv

--- a/.github/workflows/flyway_migrate.yml
+++ b/.github/workflows/flyway_migrate.yml
@@ -1,9 +1,9 @@
-name: Flyway Migrate
+name: Flyway Migration
 
 on:
   push:
     branches:
-      - master
+      - master  # Trigger on push to master branch
 
 jobs:
   migrate:
@@ -19,13 +19,13 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: Mohammad
         options: >-
-          --health-cmd "pg_isready -U postgres"
+          --health-cmd="pg_isready -U postgres"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Java
@@ -37,20 +37,11 @@ jobs:
       - name: Install Flyway
         run: |
           curl -L https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/9.22.3/flyway-commandline-9.22.3-linux-x64.tar.gz | tar xz
-          sudo ln -s `pwd`/flyway-9.22.3/flyway /usr/local/bin/flyway
+          sudo ln -s "$(pwd)/flyway-9.22.3/flyway" /usr/local/bin/flyway
 
-      - name: Wait for PostgreSQL to be ready
-        run: |
-          for i in {1..10}; do
-            if pg_isready -h localhost -p 5432 -U postgres; then
-              echo "PostgreSQL is ready!"
-              break
-            fi
-            echo "Waiting for PostgreSQL..."
-            sleep 5
-          done
+      - name: Show directory structure (debug)
+        run: ls -R
 
-      - name: Run Flyway migration using config file
+      - name: Run Flyway migration
         run: |
-          flyway -configFiles=flyway.conf migrate
-        working-directory: ./flyway
+          flyway -configFiles=flyway/flyway.conf -X migrate
