--- a/.github/workflows/flyway_migrate.yml
+++ b/.github/workflows/flyway_migrate.yml
@@ -19,7 +19,7 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: Mohammad
         options: >-
-          --health-cmd "PGUSER=postgres pg_isready -d flyway_test_db"
+          --health-cmd "pg_isready -h localhost -d $POSTGRES_DB" 
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -42,7 +42,7 @@ jobs:
       - name: Wait for PostgreSQL to be ready
         run: |
           for i in {1..10}; do
-            if PGUSER=postgres pg_isready -h localhost -p 5432 -d flyway_test_db; then
+            if pg_isready -h localhost -p 5432 -U postgres; then
               echo "PostgreSQL is ready!"
               break
             fi
@@ -54,4 +54,4 @@ jobs:
         run: |
           flyway migrate
         env:
-          FLYWAY_CONFIG_FILE: ./flyway/flyway.conf  # Path to your Flyway configuration file
+          FLYWAY_CONFIG_FILE: ./flyway/flyway.conf  # Corrected path to your flyway.conf file
