--- a/.github/workflows/flyway_migrate.yml
+++ b/.github/workflows/flyway_migrate.yml
@@ -36,7 +36,8 @@ jobs:
 
       - name: Install Flyway
         run: |
-          curl -L https://flywaydb.org/download/community/latest | tar -xz -C /tmp
+          curl -L https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/9.22.1/flyway-commandline-9.22.1-linux-x64.tar.gz -o flyway.tar.gz
+          tar -xzf flyway.tar.gz -C /tmp
           sudo mv /tmp/flyway-*/flyway /usr/local/bin
 
       - name: Wait for PostgreSQL to be ready
@@ -54,4 +55,4 @@ jobs:
         run: |
           flyway migrate
         env:
-          FLYWAY_CONFIG_FILE: ./flyway/flyway.conf  # Corrected path to your flyway.conf file
+          FLYWAY_CONFIG_FILE: ./flyway/flyway.conf
