--- a/.github/workflows/flyway_migrate.yml
+++ b/.github/workflows/flyway_migrate.yml
@@ -39,6 +39,15 @@ jobs:
           curl -L https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/9.22.1/flyway-commandline-9.22.1-linux-x64.tar.gz -o flyway.tar.gz
           tar -xzf flyway.tar.gz -C /tmp
           sudo mv /tmp/flyway-*/flyway /usr/local/bin
+          flyway -v # Verify installation
+
+      - name: Verify Flyway configuration
+        run: |
+          if [ ! -f "./flyway/flyway.conf" ]; then
+            echo "Missing flyway.conf file. Please ensure it exists at './flyway/flyway.conf'."
+            exit 1
+          fi
+          cat ./flyway/flyway.conf
 
       - name: Wait for PostgreSQL to be ready
         run: |
@@ -52,7 +61,6 @@ jobs:
           done
 
       - name: Run Flyway migration
-        run: |
-          flyway migrate
+        run: flyway -X migrate
         env:
           FLYWAY_CONFIG_FILE: ./flyway/flyway.conf
