--- a/.github/workflows/flyway_migrate.yml
+++ b/.github/workflows/flyway_migrate.yml
@@ -37,8 +37,9 @@ jobs:
       - name: Install Flyway
         run: |
           curl -L https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/9.22.1/flyway-commandline-9.22.1-linux-x64.tar.gz -o flyway.tar.gz
-          tar -xzf flyway.tar.gz -C /tmp
-          sudo mv /tmp/flyway-*/flyway /usr/local/bin
+          mkdir -p /tmp/flyway
+          tar -xzf flyway.tar.gz -C /tmp/flyway
+          sudo mv /tmp/flyway/flyway-9.22.1/flyway /usr/local/bin
           flyway -v # Verify installation
 
       - name: Verify Flyway configuration
