--- a/.github/workflows/flyway_migrate.yml
+++ b/.github/workflows/flyway_migrate.yml
@@ -36,20 +36,19 @@ jobs:
 
       - name: Install Flyway
         run: |
-          # Download Flyway
+          # Download Flyway archive
           curl -L https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/9.22.1/flyway-commandline-9.22.1-linux-x64.tar.gz -o flyway.tar.gz
 
           # Extract Flyway archive
           mkdir -p /tmp/flyway
           tar -xzf flyway.tar.gz -C /tmp/flyway
 
-          # Dynamically find the extracted Flyway directory
+          # Dynamically locate the extracted Flyway directory
           FLYWAY_DIR=$(find /tmp/flyway -type d -name "flyway*" | head -n 1)
-          echo "Flyway directory: $FLYWAY_DIR"
 
-          # Check if the binary exists
+          # Ensure the Flyway binary exists
           if [ ! -f "$FLYWAY_DIR/flyway" ]; then
-            echo "Flyway binary not found at $FLYWAY_DIR/flyway"
+            echo "Flyway binary not found in extracted directory: $FLYWAY_DIR"
             exit 1
           fi
 
