--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,3 @@
-# version: '3.8'
-
-# services:
-#   postgres-flyway:
-#     image: postgres:15
-#     ports:
-#       - "5432:5432"
-#     environment:
-#       POSTGRES_DB: flyway_test_db
-#       POSTGRES_USER: postgres
-#       POSTGRES_PASSWORD: Mohammad
-#     healthcheck:
-#       test: ["CMD-SHELL", "PGUSER=postgres pg_isready -d flyway_test_db"]
-#       interval: 10s
-#       timeout: 5s
-#       retries: 5
-
-#   flyway:
-#     image: flyway/flyway:9.22.3
-#     command: -configFiles=/flyway/flyway.conf migrate
-#     volumes:
-#       - ./flyway/sql:/flyway/sql                 # Mount SQL scripts
-#       - ./flyway/flyway.conf:/flyway/flyway.conf # Correct path to conf
-#     environment:
-#       FLYWAY_PLACEHOLDERS_POSTGRES_PASSWORD: Mohammad
-#     depends_on:
-#       postgres-flyway:
-#         condition: service_healthy0
-
 version: '3.8'
 
 services:
@@ -45,5 +16,5 @@ services:
     depends_on:
       - postgres
     volumes:
-      - ./flyway:/flyway  # Mount your Flyway configuration and migrations
+      - ./flyway/sql:/flyway/sql  # Mount the SQL migration files
     command: -url=jdbc:postgresql://postgres-flyway:5432/flyway_test_db -user=postgres -password=Mohammad migrate
