V18  Add Column tsdsdsd

--- a/.github/workflows/flyway_migrate.yml
+++ b/.github/workflows/flyway_migrate.yml
@@ -90,13 +90,12 @@
 #           FLYWAY_PASSWORD: Mohammad
 #           FLYWAY_CONFIG_FILE: ./flyway.conf
 
-
 name: Flyway Migrate
 
 on:
   push:
     branches:
-      - master  # Trigger migration on push to master branch
+      - master
 
 jobs:
   migrate:
@@ -115,6 +114,17 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          for i in {1..10}; do
+            if pg_isready -h localhost -p 5432 -U postgres; then
+              echo "PostgreSQL is ready!"
+              break
+            fi
+            echo "Waiting for PostgreSQL to be ready..."
+            sleep 5
+          done
 
       - name: Run Flyway migration
         run: |
