--- a/.github/workflows/flyway_migrate.yml
+++ b/.github/workflows/flyway_migrate.yml
@@ -1,95 +1,3 @@
-# name: Flyway Migrate
-
-# on:
-#   push:
-#     branches:
-#       - master  # Trigger migration on push to master branch
-
-# jobs:
-#   migrate:
-#     runs-on: ubuntu-latest
-
-#     services:
-#       postgres:
-#         image: postgres:15
-#         ports:
-#           - 5432:5432
-#         env:
-#           POSTGRES_DB: flyway_test_db
-#           POSTGRES_USER: postgres
-#           POSTGRES_PASSWORD: Mohammad
-#         options: >-
-#           --health-cmd "pg_isready -h localhost -d $POSTGRES_DB" 
-#           --health-interval 10s
-#           --health-timeout 5s
-#           --health-retries 5
-
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v3
-
-#       - name: Set up Java
-#         uses: actions/setup-java@v3
-#         with:
-#           distribution: 'temurin'
-#           java-version: '11'
-
-#       - name: Install Flyway
-#         run: |
-#           # Download Flyway archive
-#           curl -L https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/9.22.1/flyway-commandline-9.22.1-linux-x64.tar.gz -o flyway.tar.gz
-
-#           # Extract Flyway archive
-#           mkdir -p /tmp/flyway
-#           tar -xzf flyway.tar.gz -C /tmp/flyway
-
-#           # Debug: List contents of the extracted directory
-#           echo "Contents of /tmp/flyway:"
-#           ls -R /tmp/flyway
-
-#           # Dynamically locate the Flyway binary
-#           FLYWAY_BINARY=$(find /tmp/flyway -type f -name "flyway" | head -n 1)
-
-#           # Ensure the Flyway binary exists
-#           if [ -z "$FLYWAY_BINARY" ]; then
-#             echo "Flyway binary not found in extracted directory."
-#             exit 1
-#           fi
-
-#           # Move Flyway binary and other dependencies to /usr/local/bin
-#           sudo mv "$FLYWAY_BINARY" /usr/local/bin
-#           sudo cp -r /tmp/flyway/* /usr/local/bin/
-
-#           # Verify Flyway installation
-#           flyway -v
-
-#       - name: Verify Flyway configuration
-#         run: |
-#           if [ ! -f "./flyway.conf" ]; then
-#             echo "Missing flyway.conf file. Please ensure it exists at './flyway.conf'."
-#             exit 1
-#           fi
-#           cat ./flyway.conf
-
-#       - name: Wait for PostgreSQL to be ready
-#         run: |
-#           for i in {1..10}; do
-#             if pg_isready -h localhost -p 5432 -U postgres; then
-#               echo "PostgreSQL is ready!"
-#               break
-#             fi
-#             echo "Waiting for PostgreSQL..."
-#             sleep 5
-#           done
-
-#       - name: Run Flyway migration
-#         run: flyway -X migrate
-#         env:
-#           FLYWAY_URL: jdbc:postgresql://localhost:5432/flyway_test_db
-#           FLYWAY_USER: postgres
-#           FLYWAY_PASSWORD: Mohammad
-#           FLYWAY_CONFIG_FILE: ./flyway.conf
-
 name: Flyway Migrate
 
 on:
@@ -131,7 +39,7 @@ jobs:
           docker run --rm \
             -v $(pwd)/flyway/sql:/flyway/sql \
             flyway/flyway:latest \
-            -url=jdbc:postgresql://localhost:5432/flyway_test_db \
+            -url=jdbc:postgresql://postgres:5432/flyway_test_db \
             -user=postgres \
             -password=Mohammad \
             migrate
