--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,25 @@
+# version: '3.8'
+
+# services:
+#   postgres:
+#     image: postgres:15
+#     container_name: postgres-flyway
+#     environment:
+#       POSTGRES_DB: flyway_test_db
+#       POSTGRES_USER: postgres
+#       POSTGRES_PASSWORD: Mohammad
+#     ports:
+#       - "5432:5432"
+
+#   flyway:
+#     image: flyway/flyway:latest
+#     depends_on:
+#       - postgres
+#     volumes:
+#       - ./flyway/sql:/flyway/sql  # Mount the SQL migration files
+#     command: -url=jdbc:postgresql://postgres-flyway:5432/flyway_test_db -user=postgres -password=Mohammad migrate
+
+
 version: '3.8'
 
 services:
@@ -16,5 +38,5 @@ services:
     depends_on:
       - postgres
     volumes:
-      - ./flyway/sql:/flyway/sql
+      - ./sql:/flyway/sql  # Mount the sql directory correctly
     command: -url=jdbc:postgresql://postgres:5432/flyway_test_db -user=postgres -password=Mohammad migrate
