--- a/.github/workflows/flyway_migrate.yml
+++ b/.github/workflows/flyway_migrate.yml
@@ -88,7 +88,7 @@ jobs:
 
       - name: Run Flyway migration
         run: |
-          flyway -url=jdbc:postgresql://localhost:5432/flyway_test_db \
+          flyway -url=jdbc:postgresql://postgres-flyway-1:5432/flyway_test_db \
                  -user=postgres \
                  -password=Mohammad \
                  -locations=filesystem:./sql \
