V19  Add Column tsdsdsd

--- a/.github/workflows/flyway_migrate.yml
+++ b/.github/workflows/flyway_migrate.yml
@@ -1,49 +1,4 @@
 
-# name: Flyway Migrate
-
-# on:
-#   push:
-#     branches:
-#       - master
-
-# jobs:
-#   migrate:
-#     runs-on: ubuntu-latest
-
-#     services:
-#       postgres:
-#         image: postgres:15
-#         ports:
-#           - 5432:5432
-#         env:
-#           POSTGRES_DB: flyway_test_db
-#           POSTGRES_USER: postgres
-#           POSTGRES_PASSWORD: Mohammad
-
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v3
-
-#       - name: Wait for PostgreSQL to be ready
-#         run: |
-#           for i in {1..10}; do
-#             if pg_isready -h localhost -p 5432 -U postgres; then
-#               echo "PostgreSQL is ready!"
-#               break
-#             fi
-#             echo "Waiting for PostgreSQL to be ready..."
-#             sleep 5
-#           done
-
-#       - name: Run Flyway migration
-#         run: |
-#           docker run --rm \
-#             -v $(pwd)/flyway/sql:/flyway/sql \
-#             flyway/flyway:latest \
-#             -url=jdbc:postgresql://localhost:5432/flyway_test_db \
-#             -user=postgres \
-#             -password=Mohammad \
-#             migrate
 
 name: Flyway Migrate
 
@@ -88,7 +43,7 @@ jobs:
 
       - name: Run Flyway migration
         run: |
-          flyway -url=jdbc:postgresql://postgres-flyway-1:5432/flyway_test_db \
+          flyway -url=jdbc:postgresql://localhost:5432/flyway_test_db \
                  -user=postgres \
                  -password=Mohammad \
                  -locations=filesystem:./sql \
